syntax = "proto3";

package SCPDiscord.Interface;

message BanCommand
{
	uint64 channelID = 1;
	string steamID = 2;
	string duration = 3;
	string reason = 4;
	string adminTag = 5;
	uint64 interactionID = 6;
}