syntax = "proto3";

package SCPDiscord.Interface;

message ConsoleCommand
{
	uint64 channelID = 1;
	uint64 discordID = 2;
	string command = 3;
	uint64 interactionID = 4;
	string interactionToken = 5;
}