syntax = "proto3";

package SCPDiscord.Interface;

message UserInfo
{
	string steamIDOrIP = 1;
	uint64 discordID = 2;
	repeated uint64 roleIDs = 3;
	string discordDisplayName = 4;
	string discordUsername = 5;
	string discordUsernameWithDiscriminator = 6;
}